--- a/docs/Operation/kuber/babaei/2.md
+++ b/docs/Operation/kuber/babaei/2.md
@@ -1,11 +1,5 @@
 # 02. Main Components
 
-## Kubernetes Components Architecture
-
-kubernetes components architecture ![kc_arch](../../../assets/kuber/babaei/S01-kuber-arch.png)
-
-Kubernetes with Cloud Controller architecture ![kc_cc_arch](../../../assets/kuber/babaei/S01-kuber-cloud-arch.png)
-
 ## Deployment Tools
 
 ### Production
@@ -20,26 +14,28 @@ Kubernetes with Cloud Controller architecture ![kc_cc_arch](../../../assets/kube
 - [KindD] (Kubernetes in Docker)
 - [DockerDesktop]
 
-## [Control Plane Components][cpc]
+## Control Plane Components
 
-The control plane's components make global decisions about the cluster (for example, scheduling), as well as detecting and responding to cluster events (for example, starting up a new pod when a deployment's `replicas` field is unsatisfied).
+The [control plane's components][cpc] make global decisions about the cluster (for example, scheduling), as well as detecting and responding to cluster events (for example, starting up a new pod when a deployment's `replicas` field is unsatisfied).
 
-### [API Server][api-server]
+### API Server
 
-API Server is a common spot to integrate all kubernetes modules.
+[API Server][api-server] is a common spot to integrate all kubernetes modules.
 
 - Authentication and Authorization are here
 - Validation is here
 - can Mutate incoming date
 - can add Admission Control (get permission or not to transaction)
 
-### [kube-scheduler]
+### Scheduler
 
-- Scheduler chooses the location of the deployment
+- [Scheduler][kube-scheduler] chooses the location of the deployment
 - Scheduler alway talks with api-server
 - It can't talk directly with etcd
 
-### [kube-controller-manager]
+### Control Manager
+
+[kube-controller-manager] functions are:
 
 - manage component "desire-state"
 - monitor the cluster state via API-Server
@@ -48,23 +44,23 @@ API Server is a common spot to integrate all kubernetes modules.
 
 - **ReplicationController**: A ReplicationController ensures that a specified number of pod replicas are running at any one time. In other words, a ReplicationController makes sure that a pod or a homogeneous set of pods is always up and available.
 
-## [Node Components][node-comps]
+## Node Components
 
-Kubernetes runs your workload by placing containers into Pods to run on Nodes. A node may be a virtual or physical machine, depending on the cluster. Each node is managed by the control plane and contains the services necessary to run Pods.
+Kubernetes runs your workload by placing containers into Pods to run on [Nodes][node-comps]. A node may be a virtual or physical machine, depending on the cluster. Each node is managed by the control plane and contains the services necessary to run Pods.
 
 Typically you have several nodes in a cluster; in a learning or resource-limited environment, you might have only one node.
 
 The components on a node include the `kubelet`, a `container runtime`, and the `kube-proxy`.
 
-### [kubelet]
+### Kubelet
 
-An agent that runs on each node in the cluster. It makes sure that containers are running in a Pod.
+[Kubelet][kubelet] is an agent that runs on each node in the cluster. It makes sure that containers are running in a Pod.
 
 The kubelet takes a set of PodSpecs that are provided through various mechanisms and ensures that the containers described in those PodSpecs are running and healthy. The kubelet doesn't manage containers which were not created by Kubernetes.
 
-### [kube-proxy]
+### KubeProxy
 
-kube-proxy is a network proxy that runs on each node in your cluster, ***implementing part of the Kubernetes Service concept***.
+[kube-proxy][kube-proxy] is a network proxy that runs on each node in your cluster, ***implementing part of the Kubernetes Service concept***.
 
 **kube-proxy maintains network rules on nodes**. These network rules allow network communication to your Pods from network sessions inside or outside of your cluster.
 
@@ -72,15 +68,11 @@ kube-proxy is in charge of updating **iptables rules**
 
 kube-proxy uses the operating system packet filtering layer if there is one and it's available. Otherwise, kube-proxy forwards the traffic itself.
 
-### [Container runtime][cntr-rt]
+## API Primitives
 
-The container runtime is the software that is responsible for running containers.
+### POD
 
-Kubernetes supports `container runtimes` such as `containerd`, `CRI-O`, and any other implementation of the Kubernetes `CRI` (Container Runtime Interface).
-
-### [PODs]
-
-The shared context of a Pod is a set of Linux `namespaces`, `cgroups`, and potentially other facets of isolation - the same things that isolate a container. Within a Pod's context, the individual applications may have further `sub-isolations` applied.
+The shared context of a [Pod][PODs] is a set of Linux `namespaces`, `cgroups`, and potentially other facets of isolation - the same things that isolate a container. Within a Pod's context, the individual applications may have further `sub-isolations` applied.
 
 A Pod is similar to a set of containers with `shared namespaces` and `shared filesystem volumes`.
 
@@ -97,6 +89,12 @@ A Pod is similar to a set of containers with `shared namespaces` and `shared fil
 - command: Entrypoint array (equal to Docker ENTRYPOINT)
 - args: Arguments to pass to the command (equal to Docker CMD)
 
+### Container Runtime
+
+The [container runtime][cntr-rt] is the software that is responsible for running containers.
+
+Kubernetes supports `container runtimes` such as `containerd`, `CRI-O`, and any other implementation of the Kubernetes `CRI` (Container Runtime Interface).
+
 ## APIs
 
 ### [Container v1 core][Container-v1-core]
@@ -111,11 +109,15 @@ Kubernetes generally leverages common RESTful terminology to describe the API co
 - A single instance of a resource type is called a resource, and also usually represents an object
 - For some resource types, the API includes one or more sub-resources, which are represented as URI paths below the resource
 
-## Kubernetes Components (Controller, Node) in Picture
+## Kubernetes Components Architecture (Controller, Node) in Picture
 
 ### All Controller Components
 
 ![kube-components]
+
+### Cloud Controller
+
+![kc_cc_arch]
 
 ### Kube API-Server
 
@@ -146,6 +148,11 @@ Kubernetes generally leverages common RESTful terminology to describe the API co
 ## Kube Proxy
 
 ![kuber-proxy]
+
+## Pods
+
+![kube-api-pods]
+
 <!-- links -->
 
 [Kubeadm]: https://kubernetes.io/docs/reference/setup-tools/kubeadm/
@@ -176,3 +183,5 @@ Kubernetes generally leverages common RESTful terminology to describe the API co
 [kubelet-1]: ../../../assets/kuber/babaei/S02-kube-components-kubelet-1.png
 [kubelet-2]: ../../../assets/kuber/babaei/S02-kube-components-kubelet-2.png
 [kuber-proxy]: ../../../assets/kuber/babaei/S02-kube-components-kube-proxy.png
+[kc_cc_arch]: ../../../assets/kuber/babaei/S01-kuber-cloud-arch.png
+[kube-api-pods]: ../../../assets/kuber/babaei/S02-kube-api-pods.png
