--- a/docs/Operation/kuber/babaei/3.md
+++ b/docs/Operation/kuber/babaei/3.md
@@ -29,6 +29,14 @@ A Deployment provides declarative updates for Pods and ReplicaSets.
 
 You describe a `desired state` in a [Deployment], and the Deployment Controller changes the actual state to the `desired state` at a controlled rate. You can define Deployments to create new ReplicaSets, or to remove existing Deployments and adopt all their resources with new Deployments.
 
+### Main Difference with ReplicaSet
+
+- Rolling Updating
+  - Smooth version updating
+  - Step updateing
+- Pause/Resume Changes
+- Rollback Changes
+
 ### [Use Case](https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#use-case)
 
 - Create a Deployment to rollout a ReplicaSet.
@@ -181,4 +189,3 @@ kubectl taint nodes node1 key1=value1:NoSchedule-
 [port forwarding]: https://kubernetes.io/docs/tasks/access-application-cluster/port-forward-access-application-cluster/#forward-a-local-port-to-a-port-on-the-pod
 [Taints]: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration
 [Tolerations]: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration
-[***taint effect***]: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/#taint-based-evictions
