--- a/docs/Operation/kuber/babaei/3.md
+++ b/docs/Operation/kuber/babaei/3.md
@@ -81,11 +81,13 @@ When several users or teams share a cluster with a fixed number of nodes, there 
 
 [Resource quotas] are a tool for administrators to address this concern.
 
-### [Resource quotas API]
+### Resource quotas API
 
-## [Service][Service-Networking]
+[Resource quotas API] version 1
 
-In Kubernetes, a Service is a method for exposing a network application that is running as one or more Pods in your cluster.
+## Service
+
+In Kubernetes, a [Service][Service-Networking] is a method for exposing a network application that is running as one or more Pods in your cluster.
 
 - Enable communication <ins>between various component</ins> **_within_** and **_outside_** of application.
 
@@ -101,7 +103,7 @@ The available `type` values and their behaviors are:
 
   Exposes the Service on a [**_cluster-internal IP_**]. Choosing this value makes the Service only reachable from within the cluster. This is the default that is used if you don't explicitly specify a `type` for a Service. You can expose the Service to the public internet using an [Ingress] or a [Gateway].
 
-  **Calling a clusterIP via DNS in _Different_ Namespace**
+  **Calling a clusterIP via [DNS] in _Different_ Namespace**
 
   ```shell
   kubectl -n <namespace-name> exec <pod-name> -- curl <service-name>.<namespace>.svc.cluster.local:<target-port>
@@ -134,7 +136,9 @@ kubectl port-forward <resource-type>/<resourcename> 8080:80
 kubectl port-forward service/nginx-internal 80:8000
 ```
 
-## [Schedular](https://kubernetes.io/docs/concepts/scheduling-eviction/kube-scheduler/)
+## Schedular
+
+Important parts of an [Scheduler]
 
 ### Taint & Tolerance
 
@@ -189,3 +193,5 @@ kubectl taint nodes node1 key1=value1:NoSchedule-
 [port forwarding]: https://kubernetes.io/docs/tasks/access-application-cluster/port-forward-access-application-cluster/#forward-a-local-port-to-a-port-on-the-pod
 [Taints]: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration
 [Tolerations]: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration
+[DNS]: ../kubernetes_in_picture.md#dns
+[Scheduler]: https://kubernetes.io/docs/concepts/scheduling-eviction/kube-scheduler
