Add some images

--- a/docs/Operation/kuber/AB/4.md
+++ b/docs/Operation/kuber/AB/4.md
@@ -1,16 +1,16 @@
 # 04. Node Selectors
 
-## [Node Selector](https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector)
+## Node Selector
 
-`nodeSelector` is the simplest recommended form of node selection constraint.
+[nodeSelector] is the simplest recommended form of node selection constraint.
 
-## [Node Labels](https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#built-in-node-labels)
+## Node Labels
 
-Like many other Kubernetes objects, nodes have `labels`. You can `attach labels manually`. Kubernetes also populates a [standard](https://kubernetes.io/docs/reference/node/node-labels/) set of labels on all nodes in a cluster.
+Like many other Kubernetes objects, [nodes] have `labels`. You can `attach labels manually`. Kubernetes also populates a [standard] set of labels on all nodes in a cluster.
 
-## [Node Affinity](https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity)
+## Node Affinity
 
-Node affinity is conceptually similar to `nodeSelector`, allowing you to constrain which nodes your Pod can be scheduled on based on node labels.
+[Node affinity] is conceptually similar to `nodeSelector`, allowing you to constrain which nodes your Pod can be scheduled on based on node labels.
 
 ### Node Affinity Type
 
@@ -23,11 +23,11 @@ Node affinity is conceptually similar to `nodeSelector`, allowing you to constra
 
 - available in future version
 
-## [Resource Management for Pods and Containers](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/)
+## Resource Management for Pods and Containers
 
-### [Resource requests and limits of Pod and container](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#resource-requests-and-limits-of-pod-and-container)
+### Resource requests and limits of Pod and container
 
-For each container, you can specify resource limits and requests, including the following:
+For each container, you can specify [resource limits] and requests, including the following:
 
 ```kubernetes
     spec.containers[].resources.limits.cpu
@@ -38,12 +38,16 @@ For each container, you can specify resource limits and requests, including the 
     spec.containers[].resources.requests.hugepages-<size>
 ```
 
-### [Resource units in Kubernetes](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#resource-units-in-kubernetes)
+### Resource units in Kubernetes
 
-- [CPU resource units](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#meaning-of-cpu)
-- [Memory resource units](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#meaning-of-memory)
+#### [Resource units]
 
-### [Container resources example](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#example-1)
+- [CPU resource units]
+- [Memory resource units]
+
+### Container resources
+
+An [example]:
 
 ```yaml
 ---
@@ -73,31 +77,35 @@ spec:
         cpu: "500m"
 ```
 
-## [DaemonSet](https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/)
+## DaemonSet
 
-A DaemonSet ensures that all (or some) Nodes run a copy of a Pod.
+A [DaemonSet] ensures that all (or some) Nodes run a copy of a Pod.
 ***Exactly one*** instance of every pod.
 
-![deamonset](../../../assets/kuber/kinpic/S04-daemonset-01.png)
+## Static Pods
 
-## [Static Pods](https://kubernetes.io/docs/tasks/configure-pod-container/static-pod/)
+[Static Pods] are managed directly by the kubelet daemon on a specific node, without the API server observing them.
 
-Static Pods are managed directly by the kubelet daemon on a specific node, without the API server observing them.
+- Have a quick review of [kubelet] workload
+- Have a quick review of [schedular] workload
+- Have a quick review of [controller] workload
 
-- Have a quick review of [kubelet](2.md#kubelet) workload
-- Have a quick review of [schedular](2.md#kube-scheduler) workload
-- Have a quick review of [controller](2.md#kube-controller-manager) workload
+## Configure Multiple Schedulers
 
-## [Configure Multiple Schedulers](https://kubernetes.io/docs/tasks/extend-kubernetes/configure-multiple-schedulers/)
+[Multiple Schedulers]
 
-## [Monitoring, Logging, and Debugging](https://kubernetes.io/docs/tasks/debug/)
+## Monitoring, Logging, and Debugging
 
-[**cAdvisor**](https://kubernetes.io/docs/tasks/debug/debug-cluster/resource-metrics-pipeline/): Daemon for collecting, aggregating and exposing container metrics included in Kubelet.
+### [Debugging]
+
+[**cAdvisor**]: Daemon for collecting, aggregating and exposing container metrics included in Kubelet.
 
 - kubernetes can expose logs via event
 - kubernetes shows container logs, if you have more than one container you should enter container name
 
-## [Application Lifecycle Management](https://kubesphere.io/docs/v3.4/application-store/app-lifecycle-management/)
+## Application Lifecycle Management
+
+Application [Lifecycle] Management
 
 - Rolling Update, Rolling Back
 - Configure Applications
@@ -110,3 +118,23 @@ Static Pods are managed directly by the kubelet daemon on a specific node, witho
   - InitContainer
 
 - Self Healing Application
+
+<!-- links -->
+[nodeselector]:https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector
+[nodes]: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#built-in-node-labels
+[standard]: https://kubernetes.io/docs/reference/node/node-labels/
+[Node affinity]: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
+[resource limits]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#resource-requests-and-limits-of-pod-and-container
+[Resource units]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#resource-units-in-kubernetes
+[CPU resource units]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#meaning-of-cpu
+[Memory resource units]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#meaning-of-memory
+[example]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#example-1
+[DaemonSet]: https://kubernetes.io/docs/concepts/workloads/controllers/daemonset
+[Static Pods]: https://kubernetes.io/docs/tasks/configure-pod-container/static-pod
+[kubelet]: 2.md#kubelet
+[schedular]: 2.md#kube-scheduler
+[controller]: 2.md#kube-controller-manager
+[**cAdvisor**]: https://kubernetes.io/docs/tasks/debug/debug-cluster/resource-metrics-pipeline
+[Multiple Schedulers]: https://kubernetes.io/docs/tasks/extend-kubernetes/configure-multiple-schedulers
+[Lifecycle]: https://kubesphere.io/docs/v3.4/application-store/app-lifecycle-management
+[Debugging]: https://kubernetes.io/docs/tasks/debug
