Update kube doc

--- a/docs/Operation/kuber/AB/3.md
+++ b/docs/Operation/kuber/AB/3.md
@@ -59,6 +59,10 @@ You describe a `desired state` in a [Deployment], and the Deployment Controller 
 
 The API currently supports two types of selectors: [**equality-based**] and [**set-based**]. A label selector can be made of multiple requirements which are comma-separated. In the case of multiple requirements, all must be satisfied so the `comma` separator acts as a `logical AND (&&)` operator.
 
+### Annotations
+
+You can use Kubernetes [annotations] to attach arbitrary non-identifying metadata to objects. Clients such as tools and libraries can retrieve this metadata.
+
 ## Namespace
 
 In Kubernetes, [_namespaces_] provides a mechanism for isolating groups of resources within a single cluster. Names of resources need to be unique within a namespace, but not across namespaces. Namespace-based scoping is applicable only for namespaced **_objects_** (e.g. Deployments, Services, etc) and not for cluster-wide objects (e.g. StorageClass, Nodes, PersistentVolumes, etc).
@@ -153,10 +157,11 @@ Taints and tolerations work together to ensure that pods are not scheduled onto 
 You add a taint to a node using kubectl taint. For example,
 
 ```bash
+kubectl taint nodes <node-name> key1=value1:taunt-effect
 kubectl taint nodes node1 key1=value1:NoSchedule
 ```
 
-places a taint on node `node1`. The taint has key `key1`, value `value1`, and [_**taint effect**_] _`NoSchedule`_. This means that no pod will be able to schedule onto node1 unless it has a matching toleration.
+places a taint on node `node1`. The taint has key `key1`, value `value1`, and **[taint effect]** _`NoSchedule`_. This means that no pod will be able to schedule onto node1 unless it has a matching toleration.
 
 To remove the taint added by the command above, you can run:
 
@@ -171,6 +176,7 @@ kubectl taint nodes node1 key1=value1:NoSchedule-
 [ReplicaSet v1 apps]: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#replicaset-v1-apps
 [ReplicationController v1 core]: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#replicationcontroller-v1-core
 [Label Selectors]: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#label-selectors
+[annotations]: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
 [Deployment]: https://kubernetes.io/docs/concepts/workloads/controllers/deployment
 [Deployment v1 apps]: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#deployment-v1-apps
 [Labels]: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#label-selectors
@@ -192,6 +198,7 @@ kubectl taint nodes node1 key1=value1:NoSchedule-
 [externalName]: https://kubernetes.io/docs/concepts/services-networking/service/#externalname
 [port forwarding]: https://kubernetes.io/docs/tasks/access-application-cluster/port-forward-access-application-cluster/#forward-a-local-port-to-a-port-on-the-pod
 [Taints]: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration
+[taint effect]: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/#concepts
 [Tolerations]: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration
 [DNS]: ../kubernetes_in_picture.md#dns
 [Scheduler]: https://kubernetes.io/docs/concepts/scheduling-eviction/kube-scheduler
