Add nodeaffinity + taint/tolerance

--- a/docs/Operation/kuber/AB/4.md
+++ b/docs/Operation/kuber/AB/4.md
@@ -12,6 +12,8 @@ Like many other Kubernetes objects, [nodes] have `labels`. You can `attach label
 
 [Node affinity] is conceptually similar to `nodeSelector`, allowing you to constrain which nodes your Pod can be scheduled on based on node labels.
 
+More precisely "Node Affinity" the more complete than "Node Selector". It gets more filters and conditions to you.
+
 ### Node Affinity Type
 
 #### Available
@@ -22,6 +24,16 @@ Like many other Kubernetes objects, [nodes] have `labels`. You can `attach label
 #### Planned
 
 - available in future version
+
+|   | DuringScheduling | DuringExecution |
+| - | - | - |
+| Type 1 | Required  | Ignore   |
+| Type 1 | Preferred | Ignore   |
+| Type 1 | Required  | Required |
+
+### Node Affinity + Taint/Tolerance
+
+- **The only way** that you assign specific pods to specific node, is a combine "Node Affinity" + "Taint/Tolerance"
 
 ## Resource Management for Pods and Containers
 
