--- a/docs/Operation/kuber/AB/4.md
+++ b/docs/Operation/kuber/AB/4.md
@@ -41,7 +41,7 @@ More precisely "Node Affinity" the more complete than "Node Selector". It gets m
 
 For each container, you can specify [resource limits] and requests, including the following:
 
-```kubernetes
+```shell
     spec.containers[].resources.limits.cpu
     spec.containers[].resources.limits.memory
     spec.containers[].resources.limits.hugepages-<size>
@@ -59,7 +59,7 @@ For each container, you can specify [resource limits] and requests, including th
 
 ### Container resources
 
-An [example]:
+An [example]
 
 ```yaml
 ---
