Add service-mesh and gitops

--- a/docs/Operation/kuber/AB/4.md
+++ b/docs/Operation/kuber/AB/4.md
@@ -52,10 +52,17 @@ For each container, you can specify [resource limits] and requests, including th
 
 ### Resource units in Kubernetes
 
-#### [Resource units]
-
 - [CPU resource units]
+
+  - Fractional values
+  - 0.5 equal 500m
+  - each core divides to 1000
+  - minimum cpu unit is 1m
+  - 5200m core = 4 core full + 200m from one other core
+
 - [Memory resource units]
+
+**Note:** Default resource unit for each container is 1 core cpu and 512 Mi memory
 
 ### Container resources
 
@@ -131,13 +138,39 @@ Application [Lifecycle] Management
 
 - Self Healing Application
 
+## Service Mesh
+
+In software architecture, a service mesh is a dedicated infrastructure layer for facilitating service-to-service communications between services or microservices, using a proxy
+
+### What does a Service mesh do?
+
+A service mesh essentially manages the traffic flow between multiple microservices primarily using a sidecar proxy.
+
+![server-mesh-1]
+
+### What are the Best Service Mesh Tools?
+
+- 1. [Istio] (Recommended)
+- 2. [Linkerd]
+- 3. [Cilium Service Mesh]
+- 4. [Consul connect]
+- 5. [Traefik Mesh]
+- 6. [Open Service Mesh] (OSM)
+- 7. [Nginx Service Mesh] (NSM)
+- 8. [Kuma]
+
+## GitOps
+
+Traditional tools like Jenkins, GitLab couldn't follow the state of code.
+So we need to new tools that can follow changes over code and compares it to running state.
+
+ArgoCD and FluxCD is the populated tools for this.
 <!-- links -->
 [nodeselector]:https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector
 [nodes]: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#built-in-node-labels
 [standard]: https://kubernetes.io/docs/reference/node/node-labels/
 [Node affinity]: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
 [resource limits]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#resource-requests-and-limits-of-pod-and-container
-[Resource units]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#resource-units-in-kubernetes
 [CPU resource units]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#meaning-of-cpu
 [Memory resource units]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#meaning-of-memory
 [example]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#example-1
@@ -150,3 +183,13 @@ Application [Lifecycle] Management
 [Multiple Schedulers]: https://kubernetes.io/docs/tasks/extend-kubernetes/configure-multiple-schedulers
 [Lifecycle]: https://kubesphere.io/docs/v3.4/application-store/app-lifecycle-management
 [Debugging]: https://kubernetes.io/docs/tasks/debug
+
+[server-mesh-1]: ../../../assets/kuber/kinpic/service-mesh-1.png
+[Istio]: https://istio.io/
+[Linkerd]: https://linkerd.io
+[Cilium Service Mesh]: https://cilium.io/get-started/
+[Consul connect]: https://www.consul.io/
+[Traefik Mesh]: https://traefik.io/
+[Open Service Mesh]: https://openservicemesh.io/
+[Nginx Service Mesh]: https://docs.nginx.com/nginx-service-mesh/
+[Kuma]: https://kuma.io/
