--- a/docs/Operation/kuber/AB/4.md
+++ b/docs/Operation/kuber/AB/4.md
@@ -113,7 +113,32 @@ A [DaemonSet] ensures that all (or some) Nodes run a copy of a Pod.
 
 [Multiple Schedulers]
 
-## Monitoring, Logging, and Debugging
+## Monitoring
+
+### Metric Server
+
+[Metrics Server] is a scalable, efficient source of container resource metrics for Kubernetes built-in autoscaling pipelines.
+
+```bash
+kubectl top nodes
+```
+
+## Logging
+
+### Kubernetes Embed Log Features
+
+```bash
+kubectl logs -f <resource-name>
+kubectl -n kube-system get events
+kubectl -n kube-system get events -c <container-name> #container logs
+```
+
+#### Autoscaling Workloads
+
+In Kubernetes, you can [scale] a workload depending on the current demand of resources. This allows your cluster to react to changes in resource demand more elastically and efficiently.
+
+- [HorizontalPodAutoscaler]
+- [VerticalPodAutoscaler]
 
 ### [Debugging]
 
@@ -137,6 +162,19 @@ Application [Lifecycle] Management
   - InitContainer
 
 - Self Healing Application
+
+### Rolling Update
+
+The key feature for "Deployment" to update and rollout pods
+
+#### Annotation
+
+If we want to have history from our updates we should use key "**kubernetes.io/change-cause **" from **annotations**
+
+```bash
+kubectl annotate deployments <deployment-name> kubernetes.io/change-cause="change message"
+kubectl rollout history deployments <deployment-name>
+```
 
 ## Service Mesh
 
@@ -182,7 +220,12 @@ ArgoCD and FluxCD is the populated tools for this.
 [**cAdvisor**]: https://kubernetes.io/docs/tasks/debug/debug-cluster/resource-metrics-pipeline
 [Multiple Schedulers]: https://kubernetes.io/docs/tasks/extend-kubernetes/configure-multiple-schedulers
 [Lifecycle]: https://kubesphere.io/docs/v3.4/application-store/app-lifecycle-management
+
 [Debugging]: https://kubernetes.io/docs/tasks/debug
+
+[Metrics Server]: https://kubernetes-sigs.github.io/metrics-server
+[scale]: https://kubernetes.io/docs/concepts/workloads/autoscaling
+[HorizontalPodAutoscaler]: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale
 
 [server-mesh-1]: ../../../assets/kuber/kinpic/service-mesh-1.png
 [Istio]: https://istio.io/
