--- a/docs/Operation/kuber/AB/4.md
+++ b/docs/Operation/kuber/AB/4.md
@@ -167,9 +167,7 @@ Application [Lifecycle] Management
 
 The key feature for "Deployment" to update and rollout pods
 
-#### Annotation
-
-If we want to have history from our updates we should use key "**kubernetes.io/change-cause **" from **annotations**
+**Annotation**: If we want to have history from our updates we should use key "**kubernetes.io/change-cause**" from **annotations**
 
 ```bash
 kubectl annotate deployments <deployment-name> kubernetes.io/change-cause="change message"
