--- a/docs/Operation/kuber/AB/5.md
+++ b/docs/Operation/kuber/AB/5.md
@@ -1,8 +1,15 @@
 # 05. Configuration Management
 
-## [Define Environment Variables for a Container][Def-Env-Var-For-a-Container]
+## Container ENVs
 
-### [Different method to define configs][Diff-methd-to-def-conf]
+- Define [Environment Variables] for a Container
+
+- Mapping Pod entry point to docker container commands
+![kuber-docker-epoint]
+
+### Different method to define configs
+
+We have some different methods to [define configuration]
 
 - Plain Key-Value
 - [ConfigMap] a map from configuration in key-value format
@@ -59,8 +66,8 @@ Kubernetes just supports 3 versions earlier than the current version in updating
 ![Update-patch-policy]
 
 <!-- http links -->
-[Def-Env-Var-For-a-Container]: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
-[Diff-methd-to-def-conf]: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
+[Environment Variables]: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
+[define configuration]: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
 [ConfigMap]: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
 [Secret]: https://kubernetes.io/docs/tasks/inject-data-application/distribute-credentials-secure/#configure-all-key-value-pairs-in-a-secret-as-container-environment-variables
 [Mozilla-SOps]: https://github.com/getsops/sops
@@ -77,3 +84,5 @@ Kubernetes just supports 3 versions earlier than the current version in updating
 [kube-components]: ../../../assets/kuber/kinpic/S05-k8s-release.png
 [cluster-versioning]: ../../../assets/kuber/kinpic/S05-k8s-cluster-versioning.png
 [Update-patch-policy]: ../../../assets/kuber/kinpic/S05-k8s-version-update-support.png
+
+[kuber-docker-epoint]: ../../../assets/kuber/kinpic/S05-k8s-dcoker.png
