--- a/docs/Operation/kuber/AB/5.md
+++ b/docs/Operation/kuber/AB/5.md
@@ -23,9 +23,9 @@ We have some different methods to [define configuration]
 
 - [Patterns for Composite Containers][Ptrns-for-Cmpsit-Cont]
 
-## [Init Containers][Init-Containers]
+## Init Containers
 
-for those purpose that we want to provision or meet dependencies for target containers
+[Init-Containers] usually use for those purpose that we want to provision or meet dependencies for target containers
 
 ## [Self-Healing Applications][Self-Healing-Apps]
 
