Add multi-container pods design pattern

--- a/docs/Operation/kuber/AB/5.md
+++ b/docs/Operation/kuber/AB/5.md
@@ -19,9 +19,32 @@ We have some different methods to [define configuration]
   - [HashiCorp Vault][HashiCorp-Vault]
   - [Helm Secrets][Helm-Secrets]
 
-## [Multiple containers pods][Multiple-containers-pods]
+## Multiple containers pods
+
+ At the same time, a Pod can contain more [than one container][Multiple-containers-pods], if these containers are relatively **tightly coupled**.
+
+### Why does Kubernetes allow more than one container in a Pod?
+
+Containers in a Pod runs on a "logical host": they use the same network namespace (same IP address and port space), IPC namespace and, optionally, they can use shared volumes. Therefore, these containers can efficiently communicate, ensuring data locality. Also, Pods allow managing several tightly coupled application containers as a single unit.
+
+More info about [Multiple Container Pods]
+
+### Multi-Container Pod Design Patterns
 
 - [Patterns for Composite Containers][Ptrns-for-Cmpsit-Cont]
+- [Multi-Container Pod Design Patterns in Kubernetes][mcpdpik]
+
+#### Sidecar
+
+Sidecar containers extend and enhance the "main" container. Side car also can adds some new functionality to the main container.
+
+#### Ambassador containers
+
+Ambassador containers proxy a local connection to the world.
+
+#### Adapter containers
+
+Adapter containers standardize and normalize output main container to the outer world.
 
 ## Init Containers
 
@@ -74,6 +97,8 @@ Kubernetes just supports 3 versions earlier than the current version in updating
 [HashiCorp-Vault]: https://www.vaultproject.io/
 [Helm-Secrets]: https://github.com/jkroepke/helm-secrets
 [Multiple-containers-pods]: https://kubernetes.io/docs/concepts/workloads/pods/#how-pods-manage-multiple-containers
+[Multiple Container Pods]: https://linchpiner.github.io/k8s-multi-container-pods.html
+[mcpdpik]: https://matthewpalmer.net/kubernetes-app-developer/articles/multi-container-pod-design-patterns.html
 [Ptrns-for-Cmpsit-Cont]: https://kubernetes.io/blog/2015/06/the-distributed-system-toolkit-patterns/
 [Init-Containers]: https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
 [Self-Healing-Apps]: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
