--- a/docs/Operation/kuber/AB/5.md
+++ b/docs/Operation/kuber/AB/5.md
@@ -48,13 +48,40 @@ Adapter containers standardize and normalize output main container to the outer 
 
 ## Init Containers
 
-[Init-Containers] usually use for those purpose that we want to provision or meet dependencies for target containers
+[Init-Containers] usually use for those purpose that we want to provision or meet dependencies for target containers in a special spences.
 
-## [Self-Healing Applications][Self-Healing-Apps]
+## Self-Healing Applications
+
+The kubelet uses liveness [probes][Self-Healing-Apps] to know when to restart a container.
+
+### Liveness, Readiness, and Startup Probes
 
 - Liveness  Probes
+  - indicates weather the container is **running**
+  - if it fails, the kubelet **kills** the container
 - Readiness Probes
+  - indicates the container is **ready to respond to requests**
+  - if it falls, pod's IP address is removed from the endpoints of all **Services**
 - Startup   Probes
+  - indicates weather the application is started
+  - if it falls, the kubelet **kills** the container
+  - when it succeeded, other probes start evaluation
+
+### How Kubelet Handles Probes
+
+To perform a diagnostic, the Kubelet triggers handlers
+
+#### ExecAction
+
+- Executes a specific **command** inside the container
+
+#### TCPSocketAction
+
+- Perform a **TCP check** against the Pod's IP address on a specific port
+
+#### HTTPGetAction
+
+- Performs an **HTTP Get Request** against the Pod's IP address on a specific port and path
 
 ```bash
 kube-controller-manager --pod-eviction-timeout=5m0s
@@ -101,7 +128,7 @@ Kubernetes just supports 3 versions earlier than the current version in updating
 [mcpdpik]: https://matthewpalmer.net/kubernetes-app-developer/articles/multi-container-pod-design-patterns.html
 [Ptrns-for-Cmpsit-Cont]: https://kubernetes.io/blog/2015/06/the-distributed-system-toolkit-patterns/
 [Init-Containers]: https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
-[Self-Healing-Apps]: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+[Self-Healing-Apps]: https://kubernetes.io/docs/concepts/configuration/liveness-readiness-startup-probes/
 [Separately]: https://github.com/kelseyhightower/kubernetes-the-hard-way
 [KubeADM]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm/
 [Kubespray]: https://github.com/kubespray
